--- a/solutions/test.html
+++ b/solutions/test.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script src="./01%20Two%20Sum/index.js"></script>
+测试一下
 </body>
 </html>
